# my_lm_log

./: .env  .gitignore  README.md  client.py  pdf_deal_log.db  prompt.md  pyproject.toml  requirements.txt
0_数学基础/: 向量_矩阵_线性代数.md  对数.md  期望方差.md  概率分布与随机变量.md
0_数学基础/AI-数学-必学/: 对数.md  期望方差.md  期望方差_数字特征.md  积分与导数.md  线性代数.md  随机变量与概率分布.md
0_数学基础/AI-数学-术/: 最大似然估计.md  最小二乘法.md  概率分布与随机变量.md  蒙特卡洛方法.md
0_数学基础/AI-数学-选学/: 傅里叶变换.md  快速傅里叶.md  拉格朗日乘数.md  最大似然估计.md  条件概率.md  牛顿法.md  蒙特卡洛方法.md
0_数学基础/AI-数学-道/: 期望方差_数字特征.md  积分与导数.md  线性代数.md  随机变量与概率分布.md
1_style_transfer/: readme.md
1_样例学习/: 感知机.md
1_样例学习/集成学习/: 随机森林.md
1_样例学习/非参数模型/: SVM.md
1_监督学习/决策树/: C4.5.md  CART.md  ID3.md
1_监督学习/线性模型/: 线性回归.md  逻辑回归.md
1_监督学习/集成学习/: 梯度提升法.md  自适应提升法.md
2_概率模型/: 马尔可夫模型.md
3_深度学习/: KL散度.md
3_深度学习/前馈网络/: 前馈神经网络.md  梯度与学习.md
3_深度学习/卷积网络/: CNN.md  Unet++.md  Unet.md  残差网络.md
3_深度学习/循环神经网络/: GRU.md  LSTM.md  RNN.md
3_深度学习/无监督学习/: AE.md  DDPM.md  GAN.md  PCA.md  PPCA.md  VAE.md
3_深度学习/泛化/: KL散度.md  dropout.md  反向传播.md  权重衰减.md  梯度下降.md
4_强化学习/: RLHF.md  策略梯度.md  重要性采样.md
5_NLP/微调/: Prompt_Tuning.md
6_代码实现/: LoRA.ipynb
6_代码实现/Diffusion_models/: DDPM.ipynb
7_杂谈文章/AI应用篇章/: 文章总结.md  (+3 more)
shown_site/: index.html
test/: client.py  test_docling.py  test_gettext.py  test_litserve01.py  test_litserve02.py  test_molmo.py  test_tesseract.py
x_site_building/: readme.md
z_utils/: audio_trans.py  check_db.py  gen_face_recog.py  get_ai_tools.py  get_json.py  get_text_chunk.py  input_pdf_core.py  rotate2fix_pic.py  sql_sentence.py  structure.py  trans_xunfei_link.py
(+189 files in other folders)
