[project]
name = "my-lm-log"
version = "0.1.0"
description = "my machine learning log"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.32.1",
    "einops>=0.8.0",
    "gradio>=5.9.1",
    "gradio-pdf>=0.0.21",
    "langchain>=0.3.13",
    "langchain-ollama>=0.2.2",
    "litserve>=0.2.5",
    "openai>=1.58.1",
    "rapid-table>=0.3.0",
    "rapidocr-onnxruntime>=1.4.3",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
]
