[project]
name = "my-lm-log"
version = "0.1.0"
description = "my machine learning log"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "diffusers>=0.32.1",
    "einops>=0.8.0",
    "gradio>=5.9.1",
    "gradio-pdf>=0.0.21",
    "lancedb>=0.17.0",
    "langchain>=0.3.13",
    "langchain-ollama>=0.2.2",
    "lightning>=2.5.0.post0",
    "litserve>=0.2.5",
    "matplotlib>=3.10.0",
    "openai>=1.58.1",
    "pdf2image>=1.17.0",
    "rapid-orientation>=0.0.10",
    "rapid-table[torch]>=1.0.3",
    "rapidocr-onnxruntime>=1.4.3",
    "requests>=2.32.3",
    "surya-ocr>=0.8.3",
    "tensorboard>=2.18.0",
    "termcolor>=2.5.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
]
[tool.setuptools]
py-modules = []
